Fixes for responsiveness on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,13 @@
+html {
+	position: relative;
+	min-height: 100%;
+}
+
 body {
 	background-color: #151E1D;
 	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	color: #474747;
-	margin: 0;
-
+	margin: 0 0 200px;
 }
 
 .container {
@@ -12,15 +16,10 @@ body {
 	overflow: hidden;
 }
 
-.header {
-	margin-bottom: 50px;
-}
-
-
 .header h1 {
 	font-size: 30px;
 	font-weight: 500;
-	line-height: 140%;
+	line-height: 160%;
 }
 
 a {
@@ -29,60 +28,59 @@ a {
 
 ul {
 	padding: 0;
-	line-height: 230%;
-}
-
-.work a, .footer a {
-	font-size: 18px;
+	line-height: 260%;
 }
 
 li {
 	list-style-type: none;
 }
 
+.work {
+	font-size: 19px;
+	margin: 30px 0;
+}
+
 .footer {
-	position: fixed;
+	font-size: 16px;
+	position: absolute;
 	bottom: 0;
+	height: 200px;
 	width: 100%;
+	overflow:hidden;
 }
 
 .footer a {
 	text-decoration: none;
 }
 
-@media only screen and (max-width: 750px) {	
-
-
-
-	.header h1 {
-		font-size: 18px;
-	}
-
-	.work a, .footer a {
-		font-size: 14px;
-	}
-}
-
-
-@media only screen and (max-width: 640px) {	
+@media only screen and (max-width: 667px) {	
 	.container {
 		margin-top: 20px;
 	}
 
 	.header h1 {
+		font-size: 22px;
+	}
+
+	.work {
 		font-size: 18px;
 	}
 
-	.work a, .footer a {
-		font-size: 12px;
+	.footer {
+		font-size: 16px;
 	}
 }
 
-/* fix footer clipping */
-@media only screen and (max-height: 480px) {
+/* fix footer clipping and footer height on tiny screens */
+@media only screen and (max-height: 580px) {
+
+	body {
+		margin: 0 0 70px;
+	}
+
 	.footer {
-		position: relative;
-		bottom: auto;
+		font-size: 14px;
+		height: 70px;
 	}
 
 	.footer ul li {
@@ -90,19 +88,3 @@ li {
 		margin-right: 10px;
 	}
 }
-
-/* scale up text for 2x and 3x displays */
-/*@media only screen and (-webkit-min-device-pixel-ratio: 1.3),
-	only screen and (-o-min-device-pixel-ratio: 13/10),
-	only screen and (min-resolution: 120dpi)
-	{
-		.header h1 {
-			font-size: 200%;
-		}
-
-		.work a, .footer a {
-			font-size: 150%;
-			line-height: 200%;
-		}
-	}
-*/
